Update, not finished
I'm at a clean stopping point where I just need to parse the final html page with the data. The code still needs to be cleaned up and data still needs to stored in table

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,11 @@ constructs>=10.0.0,<11.0.0
 setuptools==56.0.0
 # aws_cdk
 awscli==1.22.82
-json
+botocore==1.24.27
+beautifulsoup4
+# import quopri
+# boto3==1.24.27
+# json
+requests
+# requests-html
+pyppeteer
