--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,5 @@ setuptools==56.0.0
 awscli==1.22.82
 botocore==1.24.27
 beautifulsoup4
-# import quopri
-# boto3==1.24.27
-# json
 requests
-# requests-html
-pyppeteer
+boto3
