--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,9 @@
 	"extensions": [
 		"ms-python.python",
 		"amazonwebservices.aws-toolkit-vscode",
-		"redhat.vscode-yaml"
+		"redhat.vscode-yaml",
+		"ms-azuretools.vscode-docker",
+		"ms-vscode.makefile-tools"
 	],
 
 	// Set *default* container specific settings.json values on container create.
