--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 aws-cdk-lib==2.17.0
-constructs>=10.0.0,<11.0.0
-setuptools==56.0.0
-awscli==1.22.82
-botocore==1.24.27
+# constructs>=10.0.0,<11.0.0
+# setuptools==56.0.0
+# awscli==1.22.82
+# botocore==1.24.27
 beautifulsoup4
 requests
-pyppeteer
+pytz
+# pyppeteer
 boto3==1.21.27
-aws-sam-cli
-typing-extensions
+# aws-sam-cli
+# typing-extensions
